--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: HarrieCRM Software for Trading Agents and Commission brokers
 url: "https://mpevreuls.github.io/harrie.github.io"
-baseurl:
+baseurl:"https://mpevreuls.github.io/harrie.github.io":
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
